--- a/angular/binding/src/app/test2/test2.component.html
+++ b/angular/binding/src/app/test2/test2.component.html
@@ -1,3 +1,8 @@
 <p>test2 works!</p>
 <input #myInput type="text">
 <button (click)="logMessage(myInput.value)">Get Value</button>
+
+<br>
+<br>
+<!-- two way binding  -->
+<input [(ngModel)]="name" type="text"> {{name}}
