--- a/angular/structural-directives/src/app/test/test.component.html
+++ b/angular/structural-directives/src/app/test/test.component.html
@@ -1,3 +1,4 @@
+<!-- ngIf  -->
 <h2 *ngIf="displayName; else elseBlock">nglf Directive</h2>
 
 <br>
@@ -11,3 +12,12 @@
 <ng-template #elseBlock>
     <h2>Name is hidden</h2>
 </ng-template>
+
+<!-- ngSwitch  -->
+
+<div [ngSwitch]="color">
+    <div *ngSwitchCase="'red'">You picked red color</div>
+    <div *ngSwitchCase="'blue'">You picked blue color</div>
+    <div *ngSwitchCase="'green'">You picked green color</div>
+    <div *ngSwitchDefault>Pick Again</div>
+</div>
