custom modules and connection

--- a/angular/structural-directives/src/app/test/test.component.html
+++ b/angular/structural-directives/src/app/test/test.component.html
@@ -28,5 +28,6 @@
 </div>
 <br>
 <div *ngFor="let color of colors; first as f">
+    <!-- first, last, even, odd  -->
     <h4>{{f}} {{color}}</h4>
 </div>
