--- a/angular/blog/src/app/app.component.html
+++ b/angular/blog/src/app/app.component.html
@@ -7,6 +7,10 @@
 <h1>{{a+b}}</h1>
 <h1>{{siteUrl}}</h1>
 
-<app-user-list> </app-user-list>
+<button (click)="getFullName('Mahmudul Hasan Reza')">get my name</button>
 
+<!-- pass variable  -->
+<!-- <button (click)="getFullName(name)">get my name</button> -->
+
+<app-user-list> </app-user-list>
 <app-login></app-login>
