--- a/angular/structural-directives/src/app/test/test.component.html
+++ b/angular/structural-directives/src/app/test/test.component.html
@@ -31,3 +31,16 @@
     <!-- first, last, even, odd  -->
     <h4>{{f}} {{color}}</h4>
 </div>
+
+<table border="1">
+    <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Email</th>
+    </tr>
+    <tr *ngFor="let item of data">
+        <td>{{item.name}}</td>
+        <td>{{item.age}}</td>
+        <td>{{item.email}}</td>
+    </tr>
+</table>
