data passed from parent to child

--- a/angular/blog/src/app/app.component.html
+++ b/angular/blog/src/app/app.component.html
@@ -79,4 +79,4 @@
 <button (click)="updateColor()">Update Color</button>
 <h2 [style.color]="err?'red':'green'">Conditional Style</h2>
 <app-login></app-login>
-<app-user-list [data]="full_name"></app-user-list>
+<app-user-list [data]="full_name" [data2]="person"></app-user-list>
