--- a/angular/basics/src/app/app.component.html
+++ b/angular/basics/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- 
+//Api call
 <table border="1">
     <tr>
         <th>ID</th>
@@ -9,4 +11,6 @@
         <td>{{item.title}}</td>
         <td>{{item.userId}}</td>
     </tr>
-</table>
+</table> -->
+
+<app-login></app-login>
